[package]
authors = ["Ricardo Martins <ricardo@scarybox.net>"]
description = "A µTP (Micro/uTorrent Transport Library) library implemented in Rust"
documentation = "http://meqif.github.io/rust-utp"
homepage = "https://github.com/maidsafe/rust-utp"
keywords = ["utp", "networking", "protocol", "transport"]
license = "MIT/Apache-2.0"
name = "temp_utp"
readme = "README.md"
repository = "https://github.com/meqif/rust-utp"
version = "0.6.20"

[dependencies]
env_logger = "~0.3.2"
log = "~0.3.3"
num = "~0.1.27"
rand = "~0.3.12"
time = "~0.1.34"

[dev-dependencies]
quickcheck = "~0.2.24"

[lib]
name = "utp"
