[package]
authors = ["Ricardo Martins <ricardo@scarybox.net>"]
description = "A µTP (Micro/uTorrent Transport Library) library implemented in Rust"
homepage = "https://github.com/meqif/rust-utp"
keywords = ["utp", "networking", "protocol", "transport"]
license = "MIT/Apache-2.0"
name = "utp"
readme = "README.md"
repository = "https://github.com/meqif/rust-utp"
version = "0.2.3"

[[bin]]
bench = false
name = "utpcat"
path = "examples/utpcat/main.rs"
test = false

[dependencies]
log = "~0.3"
num = "~0.1.29"
rand = "~0.3"
time = "~0.1.34"

[lib]
bench = false
name = "utp"
